--- a/to_rome.html
+++ b/to_rome.html
@@ -88,7 +88,7 @@ c&&(c.className+=n);s&&(s.className+=n);}catch(e){}
                 font-weight: 400;
                 line-height: 18px;
                 text-align: left;"></div>
-                        <div class="ad1Description I6vAHd h5RoYd ads-creative">Explore the ruins of Pompeii and Mount Vesuvius with round-trip shuttle service from Rome.</div>
+                        <div class="ad1Description I6vAHd h5RoYd ads-creative">Explore the ruins of Pompeii and Mount Vesuvius with round-trip shuttle service from Rome. Tours starting at €39, hotel pick-up available, book your ticket in advance. </div>
                        
                        </li>
            
