--- a/to_blue.html
+++ b/to_blue.html
@@ -88,7 +88,7 @@ c&&(c.className+=n);s&&(s.className+=n);}catch(e){}
                 font-weight: 400;
                 line-height: 18px;
                 text-align: left;"></div>
-                        <div class="ad1Description I6vAHd h5RoYd ads-creative">Discover the famous hot springs of Iceland on a day trip from Reykjavik to Blue Lagoon.</div>
+                        <div class="ad1Description I6vAHd h5RoYd ads-creative">Discover the famous hot springs of Iceland on a day trip from Reykjavik to Blue Lagoon. Pick-up service available and mobile tickets accepted. Reserve your spot today. </div>
                        </li>
             
 
